Authentications Paged Done

--- a/views/src/assets/css/custom.css
+++ b/views/src/assets/css/custom.css
@@ -4,3 +4,14 @@
   --sectionbg: #f5efef;
   --cardbg: #f7faf7;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
